# waypoint

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: e2e-linux.yml  e2e-mac.yml  e2e-windows.yml  release.yml
docs/superpowers/plans/: 2026-04-11-waypoint-implementation.md  2026-04-13-flatpak-steamdeck.md  2026-04-18-windows-e2e-webview2.md  2026-04-21-passthrough-and-window-fixes.md  2026-05-03-note-fixes.md  phase2-branch-protection.md
docs/superpowers/specs/: 2026-04-11-waypoint-design.md  2026-04-13-flatpak-steamdeck-design.md  2026-04-21-passthrough-and-window-fixes-design.md  (+1 more)
logs/: _INDEX.txt  _meta.txt
waypoint/: README.md  package-lock.json  package.json  playwright.config.ts  playwright.e2e.config.ts  svelte.config.js  vite.config.ts
waypoint/e2e/: README.md  fixtures.ts  smoke.spec.ts  wdio.conf.js
waypoint/flatpak/: io.github.i321i.waypoint.desktop  io.github.i321i.waypoint.yml
waypoint/src/: app.css  app.html  render.test.pw.ts
waypoint/src-tauri/: Cargo.toml  tauri.conf.json
waypoint/src-tauri/capabilities/: default.json
waypoint/src-tauri/src/: error.rs  lib.rs  main.rs  state.rs  taskbar.rs
waypoint/src-tauri/src/commands/: config_cmd.rs  context_cmd.rs  mod.rs  notes.rs  passthrough_cmd.rs  session_cmd.rs
waypoint/src-tauri/src/context/: detector.rs  mod.rs  normalizer.rs
waypoint/src-tauri/src/hotkey/: mod.rs
waypoint/src-tauri/src/storage/: app_config.rs  app_session.rs  autostart.rs  mod.rs  note_order.rs  notes.rs  paths.rs  session.rs  test_utils.rs
waypoint/src-tauri/src/tray/: mod.rs
waypoint/src/lib/: api.ts  (+9 more)
(+37 files in other folders)
